[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://public/image/common/Title.png" type="Texture" id=2]
[ext_resource path="res://game/title_screen/buttons/pveButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/title_screen/buttons/pvpButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/title_screen/buttons/quitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=8]
[ext_resource path="res://public/image/common/bgMain.jpg" type="Texture" id=9]
[ext_resource path="res://game/title_screen/buttons/leaderboardButton.tscn" type="PackedScene" id=11]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -428.5
margin_top = -82.0553
margin_right = 428.5
margin_bottom = 458.945
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pveBtn" parent="Buttons" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 483.0
margin_top = 361.0
margin_right = 843.0
margin_bottom = 421.0

[node name="pvpBtn" parent="Buttons" instance=ExtResource( 4 )]
visible = false
margin_left = 120.0
margin_top = 399.592
margin_right = 638.0
margin_bottom = 459.592

[node name="leaderboardButton" parent="Buttons" instance=ExtResource( 11 )]
margin_left = 479.336
margin_top = 459.592
margin_right = 997.34
margin_bottom = 519.592
scene_to_load = "res://game/leaderboard/leaderboard.tscn"

[node name="quitButton" parent="Buttons" instance=ExtResource( 5 )]
margin_left = 592.0
margin_top = 538.224
margin_right = 952.0
margin_bottom = 598.224

[node name="FadeIn" parent="." instance=ExtResource( 8 )]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
